--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
         <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+        <link rel="apple-touch-icon" href="img/iphone-icon.png"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
