Add usefull meta's so google can understand us more

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>V60 Coffee</title>
+        <meta name="description" content="With step by step instructions, you'll be guided to making the pefect coffee every time.">
+        <meta name="keywords" content="v60 coffee brew recipe bloom">
+        <meta property="og:title" content="V60 Coffee">
+        <meta property="og:description" content="With step by step instructions, you'll be guided to making the pefect coffee every time.">
+        <meta property="og:url" content="https://coffeev60.com/">
+        <meta property="og:site_name" content="V60 Coffee">
+        <meta property="og:type" content="website" />
+        <link rel="canonical" href="https://coffeev60.com/">
+
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
