Add countdown & to-do btn

--- a/index.html
+++ b/index.html
@@ -37,14 +37,17 @@
                 <div class="step bg-gray">
                     <i class="material-icons">local_drink</i>
                     <span class="inner">Pour up to <strong id="bloom-amount-info">56g</strong> of water.</span>
+                    <span class="btn to-do">Start</span>
                 </div>
                 <div class="step bg-gray">
                     <i class="material-icons">pause_circle_filled</i>
                     <span class="inner">Bloom: Wait <strong>30s</strong>.</span>
+                    <span id="countdown-btn" class="btn countdown" data-time="30">Start</span>
                 </div>
                 <div class="step bg-gray">
                     <i class="material-icons">free_breakfast</i>
                     <span class="inner">Pour over untill <strong id="final-amount-info">450g</strong> reched.</span>
+                    <span class="btn to-do">Start</span>
                 </div>
             </div>
         </div>
