--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
         <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
         <link rel="apple-touch-icon" href="img/iphone-icon.png"/>
+        <link rel="apple-touch-icon" sizes="512x512" href="img/big-iphone-icon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
