Set better meta tags (v2)

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>V60 Coffee Brew Recipe</title>
+        <title>A Great Pour Over Coffee Brewed - V60 Coffee</title>
         <meta name="description" content="With step by step instructions, you'll be guided to making the pefect coffee every time. Grind, filter and pour coffee into V60. The V60 Method.">
         <meta name="keywords" content="v60 coffee brew recipe bloom">
-        <meta property="og:title" content="V60 Coffee Brew Recipe">
+        <meta property="og:title" content="A Great Pour Over Coffee Brewed - V60 Coffee">
         <meta property="og:description" content="With step by step instructions, you'll be guided to making the pefect coffee every time. Grind, filter and pour coffee into V60. The V60 Method.">
         <meta property="og:url" content="https://coffeev60.com/">
-        <meta property="og:site_name" content="V60 Coffee Brew Recipe">
+        <meta property="og:site_name" content="V60 Coffee">
         <meta property="og:type" content="website" />
         <link rel="canonical" href="https://coffeev60.com/">
 
@@ -24,7 +24,7 @@
         <div class="wrapper" id="app">
             <div id="topline"></div>
             <hr class="spacer" />
-            <h1 class="hidden">V60 Coffee Brew</h1>
+            <h1 class="hidden">A Great Pour Over Coffee Brewed</h1>
             <div class="options-block" id="options">
                 <label for="final-amount">Final coffe amount <span class="unit">( g )</span></label>
                 <input type="number" min="150" max="900" value="450"
