--- a/index.html
+++ b/index.html
@@ -58,4 +58,14 @@
         </div>
     </body>
     <script type="text/javascript" src="js/app.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112752594-4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-112752594-4');
+    </script>
 </html>
