--- a/index.html
+++ b/index.html
@@ -10,15 +10,24 @@
         <meta property="og:url" content="https://coffeev60.com/">
         <meta property="og:site_name" content="V60 Coffee">
         <meta property="og:type" content="website" />
-        <link rel="canonical" href="https://coffeev60.com/">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <meta name="apple-mobile-web-app-title" content="V60 Brew">
 
+        <link rel="canonical" href="https://coffeev60.com/">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
         <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
-        <link rel="apple-touch-icon" href="img/iphone-icon.png"/>
-        <link rel="apple-touch-icon" sizes="512x512" href="img/big-iphone-icon.png">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="apple-touch-icon" href="img/icon-72x72.png" sizes="72x72">
+        <link rel="apple-touch-icon" href="img/icon-96x96.png" sizes="96x96">
+        <link rel="apple-touch-icon" href="img/icon-128x128.png" sizes="128x128">
+        <link rel="apple-touch-icon" href="img/icon-144x144.png" sizes="144x144">
+        <link rel="apple-touch-icon" href="img/icon-152x152.png" sizes="152x152">
+        <link rel="apple-touch-icon" href="img/icon-192x192.png" sizes="192x192">
+        <link rel="apple-touch-icon" href="img/icon-384x384.png" sizes="384x384">
+        <link rel="apple-touch-icon" href="img/icon-512x512.png" sizes="512x512">
     </head>
     <body>
         <div class="wrapper" id="app">
