--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="v60 coffee brew recipe bloom">
         <meta property="og:title" content="A Great Pour Over Coffee Brewed - V60 Coffee">
         <meta property="og:description" content="With step by step instructions, you'll be guided to making the pefect coffee every time. Grind, filter and pour coffee into V60. The V60 Method.">
-        <meta property="og:url" content="https://coffeev60.com/">
+        <meta property="og:url" content="https://coffeev60.com">
         <meta property="og:site_name" content="V60 Coffee">
         <meta property="og:type" content="website" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,9 +15,10 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="apple-mobile-web-app-title" content="V60 Brew">
 
-        <link rel="canonical" href="https://coffeev60.com/">
+        <link rel="canonical" href="https://coffeev60.com">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="manifest" href="https://coffeev60.com/manifest.json">
         <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
         <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
         <link rel="apple-touch-icon" href="img/icon-72x72.png" sizes="72x72">
