--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link rel="canonical" href="https://coffeev60.com">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
-        <link rel="manifest" href="https://coffeev60.com/manifest.json">
+        <link rel="manifest" href="manifest.json">
         <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
         <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
         <link rel="apple-touch-icon" href="img/icon-72x72.png" sizes="72x72">
@@ -69,6 +69,13 @@
         <h1 class="hidden">A Great Pour Over Coffee Brewed</h1>
     </body>
     <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript">
+        if('serviceWorker' in navigator){
+          navigator.serviceWorker.register('js/sw.js')
+            .then(reg => console.log('service worker registered'))
+            .catch(err => console.log('service worker not registered', err));
+        }
+    </script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112752594-4"></script>
