--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript">
         if('serviceWorker' in navigator){
-          navigator.serviceWorker.register('js/sw.js')
+          navigator.serviceWorker.register('sw.js')
             .then(reg => console.log('service worker registered'))
             .catch(err => console.log('service worker not registered', err));
         }
