--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <link rel="manifest" href="manifest.json">
-        <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
+        <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
         <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
         <link rel="apple-touch-icon" href="img/icon-72x72.png" sizes="72x72">
         <link rel="apple-touch-icon" href="img/icon-96x96.png" sizes="96x96">
