add a <p> so google like me better

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
             </div>
         </div>
 
-        <h1 class="hidden">A Great Pour Over Coffee Brewed</h1>
+        <h1 class="hidden" style="font-size: 1px">A Great Pour Over Coffee Brewed</h1>
+        <p class="hidden" style="font-size: 1px">With step by step instructions, you'll be guided to making the pefect coffee every time. Grind, filter and pour coffee into V60. The V60 Method.</p>
     </body>
     <script type="text/javascript" src="js/app.js"></script>
 
