Allow only numbers on inputs

--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
             <div class="options-block" id="options">
                 <label for="final-amount">Final coffe amount <span class="unit">( g )</span></label>
                 <input type="number" min="150" max="900" value="450"
+                inputmode="numeric" pattern="[0-9]*" title="Coffee amount in g"
                 name="final-amount" id="final-amount" class="bg-gray">
 
                 <label for="coffee-amount">Coffe amount <span class="unit">( g )</span></label>
                 <input type="number" min="9" max="56" value="28"
+                inputmode="numeric" pattern="[0-9]*" title="Water amount in g"
                 name="coffee-amount" id="coffee-amount" class="bg-gray">
             </div>
             <div class="information-block" id="howto">
